fix: make border on stacked elements more visible

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,6 +65,7 @@ select {
 		textarea,
 		select {
 			background: var(--stacked-element);
+			border-color: var(--border);
 		}
 	}
 }
